deploy/k8s/templates/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: ksd-mx/mx-bank-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
