deploy/k8s/templates/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress
  namespace: mx-bank-service
spec:
  ingressClassName: nginx
  rules:
  - host: localhost 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world-service
            port:
              number: 9000
